updated document store
